--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  
+  <nav class="clearfix">
+    <ul>
+        <li><a href="#">+Josef</a></li>
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Bilder</a></li>
+        <li></li>
+        <li></li>
+        <li><img src="img/jock.jpg" alt="Jock"></li>
+    </ul>  
+  </nav>
+  
    <div class="flex">
         <div class="middle-content">
             <img src="img/google-logo.jpg" alt="Google-Logo">
@@ -15,8 +27,28 @@
         </div>
         <div class="search">
             <input type="text" name="search" id="searchBox">
-            
+            <span></span>
+            <div class="btn">
+                <input type="submit" value="Google-Suche" name="firstBtn">
+                <input type="submit" value="Auf gut Glück!" name="secondBtn">
+            </div>
        </div>
     </div>
+    <footer>
+        <div class="left">
+            <ul>
+                <li>Werbeprogramme</li>
+                <li>Unternehmen</li>
+                <li>Über Google</li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul>
+                <li>Datenschutzerklärung</li>
+                <li>Nutzungsbedinungen</li>
+                <li>Einstellungen</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
