--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <div class="flex">
         <div class="middle-content">
             <img src="img/google-logo.jpg" alt="Google-Logo">
-            <span>Deimuada</span>
+            <span>Deutschland</span>
         </div>
         <div class="search">
             <input type="text" name="search" id="searchBox">
